--- a/L01.1-maven/pom.xml
+++ b/L01.1-maven/pom.xml
@@ -7,11 +7,11 @@
     <!-- Project Object Model -->
 
     <name>L01.1-maven</name>
-    <description>Code example for L01.1</description>
+    <description>homework L01</description>
 
     <developers>
         <developer>
-            <name>tully</name>
+            <name>ilevin</name>
         </developer>
     </developers>
 
@@ -25,20 +25,19 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.9</maven.compiler.target>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <com.google.guava.version>23.0</com.google.guava.version>
-        <my.variable>42</my.variable>
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>${com.google.guava.version}</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.google.guava</groupId>-->
+            <!--<artifactId>guava</artifactId>-->
+            <!--<version>${com.google.guava.version}</version>-->
+        <!--</dependency>-->
     </dependencies>
 
-    <!--
+
     <build>
         <finalName>${project.name}</finalName>
 
@@ -82,8 +81,33 @@
                 </configuration>
             </plugin>
 
+            <plugin>
+                <groupId>com.github.wvengen</groupId>
+                <artifactId>proguard-maven-plugin</artifactId>
+                <version>2.0.14</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>proguard</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <obfuscate>false</obfuscate>
+                    <injar>${project.build.finalName}.jar</injar>
+                    <outar>${project.build.finalName}_PG.jar</outar>
+                    <options>
+                        <option>-allowaccessmodification</option>
+                    </options>
+                    <libs>
+                        <lib>${java.home}\lib\rt.java</lib>
+                    </libs>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
-    -->
+
 
 </project>
