Косметические правки POM файла

--- a/L01.1-maven/pom.xml
+++ b/L01.1-maven/pom.xml
@@ -20,7 +20,7 @@
     <!--parent>*</parent-->
 
     <groupId>ru.otus</groupId>
-    <artifactId>L01.1-maven</artifactId>
+    <artifactId>l-01-home</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -29,6 +29,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <com.google.guava.version>23.0</com.google.guava.version>
         <proguard.version>6.0</proguard.version>
+        <logback.version>1.2.3</logback.version>
     </properties>
 
     <dependencies>
@@ -48,7 +49,7 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.2.3</version>
+            <version>${logback.version}</version>
         </dependency>
 
     </dependencies>
